--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-trello</title>
+    <title>Vue Trello</title>
   </head>
+  <style>
+    body{
+      margin: 0;
+      padding: 0;
+    }
+  </style>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
